--- a/Responsive-Portfolio/index.html
+++ b/Responsive-Portfolio/index.html
@@ -9,7 +9,7 @@
   <title> About Me </title>
 </head>
 
-<body id="index">
+<body>
   <div class="root home-page">
 
     <!-- Header Begin -->
@@ -33,24 +33,31 @@
 
     <!-- Main Begin -->
     <div class="site-main">
-      <div class="two-col-layout">
-        <div class="two-col-layout-inner">
-            <div class="left-col">
+      <div class="layout">
+        <div class="layout-inner">
+            <div class="layout__primary">
               <div class="about-me">
                 <h2 class="about">About Me</h2>
                 <hr>
-                <img src="assets/images/newheadshot.jpg" alt="My Pic" width="185" height="185">
+                <img class="headshot" src="assets/images/newheadshot.jpg" alt="My Pic" width="185" height="185">
+                <div class= "bio">
                 <p>I’m a Project Management / CS Operations professional with 14+ years of diverse experience in telecommunications. I have successfully implemented and managed large-scale Go-to-Market, PMO &amp; Process projects; both technical and non-technical I would like the occasion to put my leadership, project management, go-to-market and process skills to work.</p>
                 <p>
                   Scholastically, I hold Master of Science degree in Management Information Systems/CIS in addition to a PMP and ScrumMaster certification. I have also attended various workshops, classes and seminars in pursuit of continued professional growth. In previous
                   and current positions held, I routinely have had to utilize various problem-solving, analytic, negotiation and solid communication skills to meet performance goals; all within the context of meeting milestones, deadlines and QA standards.I
                   have the right mix of leadership, passion, experience and knowledge to make a great impact.
+
                 </p>
               </div>
+              </div>
             </div>
-            <div class="right-col">
+            <div class="layout__secondary">
               <div class="connect">
                 <h3 class="connect-header">Connect with Me</h3>
+
+                <img src= "assets/images/if_github2_252065.png" alt="github" width= "50" height= "50">
+                <img src= "assets/images/if_social_media_network-03_1851702.png" alt="linkedin" width= "50" height= "50">
+                <img src= "assets/images/if_stackoverflow_273179.png" alt="stackoverflow" width= "50" height= "50">
               </div>
             </div>
         </div>
@@ -58,7 +65,8 @@
     </div>
     <!-- Main End -->
 
-    <footer>
+    <footer >
+    <p> Copyright 2016 Margo Yearwood</p>
     </footer>
   </div>
 
